crates/oxc_semantic/tests/integration/snapshots/logical_expressions_short_circuit.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/logical_expressions_short_circuit.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {
	condition
}

bb3: {

}

bb4: {

}

bb5: {
	statement
	statement
}

bb6: {
	statement
}

bb7: {
	condition
}

bb8: {

}

bb9: {

}

bb10: {
	statement
}

bb11: {
	statement
}

bb12: {
	condition
}

bb13: {

}

bb14: {

}

bb15: {
	statement
}

bb16: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
IfStatement" shape = box]
    2 [ label = "bb2
Condition(LogicalExpression)" shape = box]
    3 [ label = "bb3" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5
BlockStatement
ExpressionStatement" shape = box]
    6 [ label = "bb6
IfStatement" shape = box]
    7 [ label = "bb7
Condition(LogicalExpression)" shape = box]
    8 [ label = "bb8" shape = box]
    9 [ label = "bb9" shape = box]
    10 [ label = "bb10
ExpressionStatement" shape = box]
    11 [ label = "bb11
IfStatement" shape = box]
    12 [ label = "bb12
Condition(LogicalExpression)" shape = box]
    13 [ label = "bb13" shape = box]
    14 [ label = "bb14" shape = box]
    15 [ label = "bb15
ExpressionStatement" shape = box]
    16 [ label = "bb16" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 3 [ label="Normal"]
    2 -> 4 [ label="Normal"]
    3 -> 4 [ label="Normal"]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 2 [ label="Normal"]
    5 -> 6 [ label="Normal"]
    4 -> 5 [ label="Jump", color=green]
    1 -> 6 [ label="Normal"]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 8 [ label="Normal"]
    7 -> 9 [ label="Normal"]
    8 -> 9 [ label="Normal"]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    11 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 7 [ label="Normal"]
    10 -> 11 [ label="Normal"]
    9 -> 10 [ label="Jump", color=green]
    6 -> 11 [ label="Normal"]
    12 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    13 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    14 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    12 -> 13 [ label="Normal"]
    12 -> 14 [ label="Normal"]
    13 -> 14 [ label="Normal"]
    15 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    16 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    11 -> 12 [ label="Normal"]
    15 -> 16 [ label="Normal"]
    14 -> 15 [ label="Jump", color=green]
    11 -> 16 [ label="Normal"]
}
