crates/oxc_semantic/tests/integration/snapshots/member_access_with_unreachable.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/member_access_with_unreachable.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start | Referenced))
	return <value>
}

bb4: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
	return <value>
}

bb5: {
	(BasicBlockFlags(Unreachable))
	unreachable
}

bb6: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start | Referenced))
return <value>" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Unreachable | Referenced))
unreachable
return <value>" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Unreachable))
unreachable" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Unreachable", style="dotted"]
    5 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 5 [ label="Unreachable", style="dotted"]
    6 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 6 [ label="Normal"]
}
