crates/oxc_semantic/tests/integration/snapshots/new_class_then_call_fn.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/new_class_then_call_fn.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start))
	statement
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start))
VariableDeclaration" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
}
