crates/oxc_semantic/tests/integration/snapshots/parenthesized_and_sequence_expr.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/parenthesized_and_sequence_expr.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start))
	statement
}

bb4: {
	(BasicBlockFlags(Referenced | Shared))
}

bb5: {
	(BasicBlockFlags(Implicit | Error))
}

bb6: {
	(BasicBlockFlags(Start))
	statement
}

bb7: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start))
ExpressionStatement" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Referenced | Shared))" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Implicit | Error))" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Start))
ExpressionStatement" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 4 [ label="Normal"]
    6 -> 5 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 6 [ label="NewFunction"]
    7 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 7 [ label="Normal"]
}
